--- a/templates/engineering/budget_detail.html
+++ b/templates/engineering/budget_detail.html
@@ -55,10 +55,10 @@
                             <tr>
                                 <td>{{ item.category }}</td>
                                 <td>{{ item.description }}</td>
-                                <td>${{ item.budget_amount|floatformat:2 }}</td>
-                                <td>${{ item.actual_spent|floatformat:2 }}</td>
+                                <td>₹{{ item.budget_amount|floatformat:2 }}</td>
+                                <td>₹{{ item.actual_spent|floatformat:2 }}</td>
                                 <td class="{% if item.variance < 0 %}text-danger{% else %}text-success{% endif %}">
-                                    ${{ item.variance|floatformat:2 }}
+                                    ₹{{ item.variance|floatformat:2 }}
                                 </td>
                                 <td class="{% if item.variance_percentage < 0 %}text-danger{% else %}text-success{% endif %}">
                                     {{ item.variance_percentage|floatformat:1 }}%
@@ -69,7 +69,7 @@
                         <tfoot>
                             <tr class="table-primary">
                                 <th colspan="2">Total Budget</th>
-                                <th class="fw-bold">${{ budget.total_budget|floatformat:2 }}</th>
+                                <th class="fw-bold">₹{{ budget.total_budget|floatformat:2 }}</th>
                                 <th colspan="3"></th>
                             </tr>
                         </tfoot>
